--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
-    },
-    "devDependencies": {
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "dependencies": {
+    "@inertiajs/react": "^1.0.0",
+    "axios": "^0.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.27.1",
+    "@headlessui/react": "^1.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.12",
+    "laravel-vite-plugin": "^0.7.6",
+    "lodash": "^4.17.19",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "vite": "^4.5.0"
+  }
 }
+
